bakkie_derive/tests/ui/fail/tool_on_sync_function.rs
use bakkie_derive::tool;

#[tool]
fn sync_function(param: String) -> String {
    param
}

fn main() {}